# ComfyUI-Prompt-Stash

./: .editorconfig  .gitignore  README.md  __init__.py  data_utils.py  default_prompt_stash_data.json  node_list.json  prompt_stash_data.json  prompt_stash_manager_node.py  prompt_stash_passthrough_node.py  prompt_stash_saver_node.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: PromptStashSample.json
js/: prompt_stash_manager.js  prompt_stash_passthrough.js  prompt_stash_saver.js
