[project]
name = "confyui-node-prompt-stash-saver"
description = ""
version = "1.1.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/phazei/ConfyUI-node-prompt-stash-saver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phazei"
DisplayName = "Prompt Stash Saver Node"
Icon = ""
