[project]
name = "confyui-node-prompt-stash-saver"
description = "Prompt Stash is a simple plugin for ComfyUI that lets you save your prompts and organize them into multiple lists. It also features a pass-through functionality, so you can hook it up to an LLM node (or any text outputting node) and capture its outputs directly."
version = "1.1.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/phazei/ConfyUI-node-prompt-stash-saver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phazei"
DisplayName = "Prompt Stash Saver Node"
Icon = ""
